--- a/1903.10398/lueders-190319.tex
+++ b/1903.10398/lueders-190319.tex
@@ -1,11 +1,9 @@
-\documentclass[
-aps,prl,
-reprint,
-a4paper,
+\documentclass[12pt,
+onecolumn,
 superscriptaddress,
 %longbibliography,
 floatfix,
-]{revtex4-1}
+]{revtex4-2}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 
@@ -14,14 +12,8 @@ floatfix,
 \usepackage{graphicx}
 \usepackage{rotating}
 %\usepackage{dblfloatfix}
-\usepackage{hyperref}
 \usepackage{units}
 \usepackage{xfrac}
-
-\hypersetup{citecolor=magenta}
-\hypersetup{colorlinks=true}
-\hypersetup{linkcolor=blue}
-\hypersetup{urlcolor=blue}
 
 \DeclareMathOperator{\argmin}{arg\,min}
 \DeclareMathOperator{\im}{Im}
@@ -35,6 +27,43 @@ floatfix,
 \newcommand{\proj}[1]{{\ketbra{#1}{#1}}}
 
 \newcommand{\XXX}[1]{{\color{red}[\texttt{XXX}~{#1}~\texttt{XXX}]}}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 \begin{document}
 
@@ -97,9 +126,11 @@ By taking tomographic snapshots during the detection process, we show with an av
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \maketitle
+\newpage
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-{\em Introduction.---}%
+\section{Introduction}
+
 What is an ideal measurement in quantum mechanics?
 What are its inner workings?
 How does the quantum state change because of it?
@@ -198,7 +229,8 @@ Usually, experimental measurement procedures are not Lüders processes, because
  imperfections which then leads to a process as the one envisioned by von 
  Neumann, in which all coherences are destroyed.
 
-{\em Fluorescence measurements.---}%
+\section{Fluorescence measurements}
+
 The best candidate for a natural Lüders process is a interaction-free measurement, that 
  is, a measurement of an observable of the form $A= \proj{\phi}$, where the 
  event ``detection'' corresponds to the eigenvalue $1$ and the event ``no 
@@ -318,7 +350,8 @@ First the ion is prepared in one of nine initial states (Appendix, Table~\ref{ta
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-{\em Experimental setup.---}%
+\section{Experimental setup}
+
 Our setup consists of a single $^{88}\mathrm{Sr}^{+}$ ion confined in a linear 
  Paul trap, similar to Ref.~\cite{Higgins17}.
 Fig.~\ref{fig:experiment}~(a) shows the level scheme of the ion with the qutrit states
@@ -373,7 +406,9 @@ From (a) to (d) the coupling strength of $\ket{0}$ to the photon environment is 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-{\em Results.---}%
+
+\section{Results}
+
 For analyzing the experiment, a process $\Lambda$ is more conveniently 
  represented by its Choi matrix \cite{Heinosaari12},
 %
@@ -427,7 +462,8 @@ We also show post-process density matrices for the initial state
  $\frac{1}{\sqrt{2}} \left(\ket{1} + i\ket{2}\right)$ -- the coherence is preserved, and for the initial state $\frac{1}{\sqrt{2}}\left(\ket{0} + i\ket{2}\right)$ -- the coherence is destroyed.
  
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-{\em Conclusion.---}%
+\section{Conclusion}
+
 Fluorescence detection is the standard way to measure a qubit in an ion trap or 
  in similar setups that enable quantum information processing.
 This process is a prime example of an ideal measurement process:
@@ -475,7 +511,8 @@ Whether such processes exist as natural processes and can be implemented with a
  fidelity comparable to our experiment is an open question.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-{\em Acknowledgements.---}
+\section{Acknowledgements}
+
 %\begin{acknowledgments}
 We thank Mohamed Bourennane and Markus Müller for discussions.
 This work was supported by
