--- a/hep-th-9406204/9406204.tex
+++ b/hep-th-9406204/9406204.tex
@@ -4,7 +4,46 @@
 %Corrected Sept. 16 98 by Arkadiusz Jadczyk <ajad@ift.uni.wroc.pl>
 
 
-\documentstyle{article}
+\documentclass[12pt]{article}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 %%%\begin{document}
 %%\tableofcontents
 \def\complex{{\kern .1em {\raise .47ex \hbox
@@ -421,12 +460,13 @@ in adapted coordinates, takes the form
 \def\linie{\vrule height 15pt depth 5pt}
 \def\back{\noalign{\vskip-3pt}}
 %\lineskip=0pt
-$$\pmatrix{0 &\linie & \phantom{0 }& 0 &\phantom{0}\cr
+$$\begin{pmatrix}0 &\linie & \phantom{0 }& 0 &\phantom{0}\cr
 \noalign{\hrule}
 &\linie && \cr\back
 0 &\linie &  & g^{ij} & 
 \cr\back
-& \linie && } \ . $$
+& \linie && 
+\end{pmatrix} \ . $$
 where $g^{ij}$ is of signature $ (+++) . $ We denote by $g_{ij}$ the
 inverse $3\times 3$ matrix.  It defines Riemannian metric in the
 fibers of $E . $\\
@@ -642,9 +682,9 @@ $$
 \displaystyle\mathop{g}\limits^{5}
 &  =\   d\phi \otimes dx^{0} + dx^{0} \otimes d\phi
 \cr\cr
-& +g_{ij}dx^{i}\otimes dx^{j} + 2 \alpha_{0}
+& \quad +g_{ij}dx^{i}\otimes dx^{j} + 2 \alpha_{0}
 dx^{0}\otimes  dx^{0} + \cr\cr
-& + \alpha_{i}
+& \quad + \alpha_{i}
 \left ( dx^{i}\otimes dx^{0} + dx^{0}\otimes dx^{i} \right) . 
 \end{array}
 $$
@@ -668,23 +708,28 @@ The contravariant metric $\mathop{g}\limits^{5}{}^{-1}
 $\alpha,  \beta = 0, 1, 2, 3, 5$, 
 \be
 \left ( g^{\alpha \beta} \right)
-= \pmatrix{ 0 & 0 & 1 \cr\cr
+= \begin{pmatrix} 0 & 0 & 1 \cr\cr
 0 & g^{ij} & -g^{ij}a_{j} \cr\cr
-1 & -g^{ij}a_{j} & \b{a}^{2}-2a_{0} }
+1 & -g^{ij}a_{j} & \b{a}^{2}-2a_{0} 
+\end{pmatrix}
 \ . 
 \ee
 can be obtained from the following Clifford algebra of $4\times 4$
 complex matrices: 
 \be
 \begin{array}{l}
-\gamma^{0} = \pmatrix{0 & 0 \cr
-1 & 0} 
+\gamma^{0} = \begin{pmatrix}0 & 0 \cr
+1 & 0
+\end{pmatrix}
 \cr\cr
-\gamma^{i} = \pmatrix{ \sigma^{i} & 0 \cr
-0 & - \sigma^{i} }
+\gamma^{i} = \begin{pmatrix} \sigma^{i} & 0 \cr
+0 & - \sigma^{i} 
+1 & 0
+\end{pmatrix}
 \cr\cr
-\gamma^{5} = \pmatrix{-\underline{\sigma}\cdot \underline{a} & 1 \cr\cr
- -2a_{0} & \underline{\sigma} \cdot \underline{a} }
+\gamma^{5} = \begin{pmatrix}-\underline{\sigma}\cdot \underline{a} & 1 \cr\cr
+ -2a_{0} & \underline{\sigma} \cdot \underline{a}
+ \end{pmatrix}
 \end{array}
 \ee
 One takes then 5--dimensional charged Dirac operator $\gamma^{\alpha}
@@ -1035,10 +1080,11 @@ of the total system we take
 ${\cal A}_{tot}={\cal A}_q \otimes {\cal A}_{cl}$ which is isomorphic to the
 diagonal subalgebra of ${\cal M}_m  ({\cal A}_q) . $ Observables of the total
 system are block diagonal matrices: 
-$${\bf A}=diag (A_{\alpha}) = \pmatrix{A_1&0&0&\ldots&0\cr
+$${\bf A}=diag (A_{\alpha}) = \begin{pmatrix}
+A_1&0&0&\ldots&0\cr
 0&A_2&0&\ldots&0\cr
 &&\ldots&&\cr
-0&0&0&\ldots&A_m\cr}, $$
+0&0&0&\ldots&A_m\cr\end{pmatrix}, $$
 where $A_{\alpha},   (\alpha=1, \ldots , m)$ are operators in ${\cal H}_q
 . $
 \footnote{It is useful to have the algebra  ${\cal A}_{tot}$
@@ -1151,8 +1197,8 @@ two--dimensio\-nal Hilbert space
 ${\cal H}_q=\complex^2. $
 To define the dynamics we choose the coupling operator $V$ in the
 following way: 
-\be V = \sqrt{\kappa} \pmatrix{0,     & e \cr
-                   e, & 0     } . \ee The Liouville equation
+\be V = \sqrt{\kappa} \begin{pmatrix}0,     & e \cr
+                   e, & 0     \end{pmatrix} . \ee The Liouville equation
  (\ref{eq: lio} ) for the density matrix $\rho = diag (\rho_1, \rho_2)$ of
 the total system reads now
 \be
@@ -1230,28 +1276,28 @@ $s_i . $  Otherwise
 the state of the classical system will be unchanged.  To this end we
 take 
 $$V_{1} ={\sqrt\kappa}
- \pmatrix{0,     & a_{1} ,  &0 ,  &\ldots ,  &0 ,    
+ \begin{pmatrix}0,     & a_{1} ,  &0 ,  &\ldots ,  &0 ,    
 &0
 \cr
                    a_{1}, & 0     ,  &0 ,  &\ldots ,  &0 ,     &0 \cr
                    0,    & 0     ,  &0 ,  &\ldots ,  &0 ,     &0\cr
 \ldots&\ldots   &\ldots&\ldots &\ldots&\ldots\cr
-                   0    , & 0     ,  &0 ,  &\ldots ,  &0 ,    &0} , $$
+                   0    , & 0     ,  &0 ,  &\ldots ,  &0 ,    &0\end{pmatrix} , $$
 
-$$V_{2} = {\sqrt\kappa}\pmatrix{0,     & 0     ,  & a_{2} ,  &\ldots ,  &0
+$$V_{2} = {\sqrt\kappa}\begin{pmatrix}0,     & 0     ,  & a_{2} ,  &\ldots ,  &0
 ,  &0\cr
                    0    , & 0     ,  &0 ,  &\ldots ,  &0 ,  &0\cr
                    a_{2}, & 0     ,  &0 ,  &\ldots ,  &0 ,  &0\cr
                    0    , & 0     ,  &0 ,  &\ldots ,  &0 ,  &0\cr
                    \ldots&\ldots   &\ldots&\ldots&\ldots&\ldots\cr
-                   0    , & 0     ,  &0 ,  &\ldots ,  &0 ,  &0} , $$
+                   0    , & 0     ,  &0 ,  &\ldots ,  &0 ,  &0\end{pmatrix} , $$
 \vspace{0.5cm} $$\ldots$$ \vspace{0.5cm}
-$$V_{n} = {\sqrt\kappa}\pmatrix{0,     & 0     ,  & 0 ,  &\ldots ,  &0 , 
+$$V_{n} = {\sqrt\kappa}\begin{pmatrix}0,     & 0     ,  & 0 ,  &\ldots ,  &0 , 
 &a_{n}\cr
                    0    , & 0     ,  &0 ,  &\ldots ,  &0 ,  &0\cr
                    \ldots&\ldots   &\ldots&\ldots&\ldots&\ldots\cr
                    0    , & 0     ,  &0 ,  &\ldots ,  &0 ,  &0\cr
-                   a_{n}    , & 0     ,  &0 ,  &\ldots ,  &0 ,  &0} . $$
+                   a_{n}    , & 0     ,  &0 ,  &\ldots ,  &0 ,  &0\end{pmatrix} . $$
 
 
 
