--- a/hep-th-9406204/9406204.tex
+++ b/hep-th-9406204/9406204.tex
@@ -58,6 +58,7 @@ bookmarksopenlevel=10
 Institute of Theoretical Physics, 
  University of Wroc{\l }aw,  \\
 Pl.  Maxa Borna 9,  PL 50 204 Wroc{\l }aw,  Poland} %\maketitle{}
+\date{June 30 1994}
 \begin{document}
 \newtheorem{theorem}{Theorem}
 \maketitle
@@ -90,7 +91,7 @@ roughly this:  if some quantum mechanical observable is being measured,
 then - as
 a consequence of this measurement - the actual state of the quantum system 
 {\sl jumps} into one of the eigenstates of the measured
-observable. \footnote{L\"uders
+observable.\footnote{L\"uders
 \cite{lud} noticed that this formulation is ambiguous in case of
 degenerate eigenvalues,  and generalized it to cover also this
 situation. } This jump was thought to be abrupt and take no time at all
@@ -107,7 +108,7 @@ stochastic processes that unite both kinds of evolution.
 It is rather easy to explain to the mathematician the {\sl Dirac} equation --
 it became already a part of the mathematical folklore.  But Dirac's equation
 belongs to {\sl field theory} rather than to
-{\sl quantum theory}. \footnote{In
+{\sl quantum theory}.\footnote{In
 these lectures,  "quantum theory" usually means
 "quantum mechanics",  although much of the concepts that we discuss
 are applicable also to systems with infinite number of degrees of
@@ -134,7 +135,7 @@ other\footnote{Including the  author of these notes. },  a
 minority,  also believe that it is only a {\sl temporary} situation,  which
 one day will be resolved.  But the resolution will come
 owing to essentially
-\underline{new physical ideas}, 
+{new physical ideas}, 
 and it will result in a new quantum paradigm,  more appealing than the
 present one.  It should perhaps be not a surprise if,  in an appropriate sense,  
 all
@@ -144,12 +145,12 @@ very basis of the current quantum scheme,  and with its dissipative
 generalization -- the Liouville equation. 
 In these equations we assume that we 
 know what the {\sl time} is.  Such a knowledge is negated in special
-relativity, \footnote{There exists however so called "relativistic
+relativity,\footnote{There exists however so called "relativistic
 Fock--Schwinger proper time formalism" \cite[Ch. 2--5--4]{itz} where
 one writes Schr\"odinger equation with Hamiltonian replaced by
 "super--Hamiltonian,  and time replaced by "proper time"} and this results
 in turn in all kinds of troubles that we are facing since the birth of
-Einstein's relativity till this day.
+Einstein's relativity till this day.%
 \footnote{One could try to "explain" time by saying that there is a
 preferred time direction selected by
 the choice of a thermal state of the universe. But that is of no help
@@ -160,7 +161,7 @@ being achieved.}
 difficult than the Dirac one,  and this for two reasons: 
 first,  it lives on the
 background of {\sl Galilean} relativity -- which have to deal with much more
-intricate geometric structures than Einstein relativity. \footnote{
+intricate geometric structures than Einstein relativity.\footnote{
 In group theoretical terms:  the proper Lorentz group is simple, 
 while the proper Galilei group is not. } 
  Second, 
@@ -204,7 +205,7 @@ etc.  In the next chapter,  we will show the way that leads to the
 {\sl geometrical language} as much as possible.  However,  we will not use the
 machinery of {\sl geometrical quantization} because it treats {\sl time}
 simply as a {\sl parameter},  and {\sl space} as absolute and
-given once for all. \footnote{Cf.  e. g.  Ref.  \cite[Ch. 9]{snia}. }
+given once for all.\footnote{Cf.  e. g.  Ref.  \cite[Ch. 9]{snia}. }
 On the other hand,  geometrical quantization introduces many
 advanced tools
 that are unnecessary
@@ -238,14 +239,14 @@ or,  in a local trivialization,  as \be
 {\frac{{\partial \Psi  (t)}}{{\partial t}}} + 
 {i\over\hbar}H (t)\Psi  (t) =
 0,  \ee
-where $H (t)$ will be a self--adjoint operator in ${\cal H}_t$. 
+where $H (t)$ will be a self--adjoint operator in ${\cal H}_t$.% 
 \footnote{A similar idea was mentioned in \cite{aso}.  For a detailed
 description of all the constructions -- see the forthcoming book \cite{jamo}}
 Gravitational and electromagnetic forces are
 coded into this Schr\"odinger's connection. 
 Let us discuss the resulting structure.  First of all
 there is not a single  Hilbert space but a
-\underline{family} of Hilbert spaces. 
+{family} of Hilbert spaces. 
 These Hilbert spaces can be {\sl identified} either using an
 {\sl observer}  and
 {\sl gauge}  or,better, by using a background dynamical connection.
@@ -253,7 +254,7 @@ It is only after so doing
 that one arrives at
 single--Hilbert--space picture of the textbook Quantum Mechanics --
 a picture that
-is the constant source of lot of confusion. \footnote{Notable
+is the constant source of lot of confusion.\footnote{Notable
 exceptions can be found in  publications from the
 Genev\'e school of Jauch and Piron. }\\ 
 In Quantum Mechanics we have a {\sl dual}
@@ -471,7 +472,7 @@ where $g^{ij}$ is of signature $ (+++) . $ We denote by $g_{ij}$ the
 inverse $3\times 3$ matrix.  It defines Riemannian metric in the
 fibers of $E . $\\
 We assume a torsion--free connection in $E$ that preserves
-the two geometrical objects $g^{\mu\nu}$ and $\beta$.
+the two geometrical objects $g^{\mu\nu}$ and $\beta$.%
 \footnote{Some of these assumptions are superfluous
 as they would
 follow anyhow from the assumption $d\Omega=0$ in the next
@@ -623,7 +624,7 @@ $\Gamma$ and $R^{\mu\ \phantom{\nu}\sigma}_{\phantom{\mu}
  \nu \phantom{\sigma} \rho}
  =g^{\mu\lambda}
 R_{\lambda \nu \phantom{\sigma} \rho}^{\phantom{\mu \nu}\sigma} $
-\item[ (iii)] $\partial_{[ \mu} \Phi_{\nu\sigma]}=0 $.
+\item[ (iii)] $\partial_{[ \mu} \Phi_{\nu\sigma]}=0 $.%
 \footnote{Notice that because $\Phi$ is not a tensor, the last
 condition need not be, a priori, generally covariant.}
 \end{description}
@@ -727,8 +728,8 @@ complex matrices:
 1 & 0
 \end{pmatrix}
 \cr\cr
-\gamma^{5} = \begin{pmatrix}-\underline{\sigma}\cdot \underline{a} & 1 \cr\cr
- -2a_{0} & \underline{\sigma} \cdot \underline{a}
+\gamma^{5} = \begin{pmatrix}-{\sigma}\cdot {a} & 1 \cr\cr
+ -2a_{0} & {\sigma} \cdot {a}
  \end{pmatrix}
 \end{array}
 \ee
@@ -1086,7 +1087,7 @@ A_1&0&0&\ldots&0\cr
 &&\ldots&&\cr
 0&0&0&\ldots&A_m\cr\end{pmatrix}, $$
 where $A_{\alpha},   (\alpha=1, \ldots , m)$ are operators in ${\cal H}_q
-. $
+. $%
 \footnote{It is useful to have the algebra  ${\cal A}_{tot}$
 represented in such a form, as it enables us to apply the
 theorem of Christensen--Evans.}
@@ -1109,7 +1110,7 @@ system,  we can trace over the quantum system to get an effective state
 of the classical system
 $p_\alpha =Tr (\rho_\alpha ) ,  $ or we can trace over the classical
 system to get the effective state of the quantum system
-${\hat\rho}=\sum_\alpha\rho_\alpha . $
+${\hat\rho}=\sum_\alpha\rho_\alpha . $%
 \footnote{One can easily imagine a more general situation when
 tracing over the classical system will not be meaningful.  This can
 happen if we deal with several {\sl phases} of the quantum system, 
@@ -1117,7 +1118,8 @@ parameterized by the classical parameter $\alpha$.  It may then happen
 that the total algebra is not the  tensor product algebra.  For
 instance,  instead of one Hilbert space ${\cal H}_q , $ we may have, 
 for each value of $\alpha , $ a Hilbert space ${\cal H}_{q, \alpha}$ 
-of dimension $n_\alpha$ . }\\
+of dimension $n_\alpha$ . }
+
 Let us consider dynamics.  Since the classical system has a discrete
 set of pure states,  there is no non--trivial and continuous  time
 evolution for the
@@ -1161,7 +1163,7 @@ of dissipative couplings of classical and quantum systems,  the best we
 can do is to show some characteristic examples. It will be done in the
 following section.  For every example a piecewise deterministic random
 process  will be described that takes place on the space of pure
-states of the total system
+states of the total system%
 \footnote{One may wonder what does that mean mathematically, as
 the space of pure states of a $C^{\star}$ algebra is, from
 measure--theoretical point of view, a rather
@@ -1174,7 +1176,7 @@ A theory of piecewise
 deterministic  (PD) processes is described in a recent book by M. H. 
 Davis \cite{dav}.  Processes of that type,  but without a non--trivial
 evolution of the classical system,  were discussed also in physical
-literature -- cf.  Refs \cite{car,dal,dum,gar}.
+literature -- cf.  Refs \cite{car,dal,dum,gar}.%
 \footnote{Thanks are due to N.  Gisin for pointing out these
 references. }
 We will consider Liouville equations of the form
@@ -1185,7 +1187,7 @@ We will consider Liouville equations of the form
 explicitly depend on time. 
 The $V_i$ will be chosen as tensor products
 $V_i=\sqrt{\kappa} e_i\otimes\phi_i$,  where
-$\phi_i$ act as transformations
+$\phi_i$ act as transformations%
 \footnote{Or, more precisely, as Frobenius--Perron operators. Cf.
 Ref.\cite{las} for definition and examples of Frobenius--Perron and
 dual to them Koopman operators.} 
@@ -1416,7 +1418,7 @@ $1-\exp\left(\int_t^{t+dt}\lambda_{\alpha}(s)ds\right)\approx
 Notice that this depends on the actual state $(\psi,\alpha)$.
 However,  as numerical
 computation show,  the dependence  is negligible and approximately
- jumps occur always after time $t_1=1/\kappa$. 
+ jumps occur always after time $t_1=1/\kappa$.%
 \footnote{This sequence of transformation on the space of pure states of the
 quantum system can be thought of as a nonlinear version of Barnsley's Iterated
 Function System  (cf.  e. g.  \cite{bar}  }
@@ -1424,18 +1426,18 @@ Function System  (cf.  e. g.  \cite{bar}  }
 
 In the previous example the coupling between classical and quantum
 systems involved a finite set of non--commuting observables.  In the
-present one we will go to the extreme -- we will use {\underline all}
+present one we will go to the extreme -- we will use { all}
 one--dimensional projections in the coupling.  One can naturally discover
 such a model when looking for a precise answer to the question: 
 \begin{center} {\sl how
-to determine state of an individual quantum system ?}
+to determine state of an individual quantum system?}
 \end{center}
 For some time I was sharing the predominant opinion
  that a positive answer to this question can
 not be given,  as there is no observable to be measured that answers the
 question:  {\sl what state our system is in ?}.  Recently Aharonov and
 Vaidman
-\cite{aha} discussed this problem in some details.  \footnote{I do not
+\cite{aha} discussed this problem in some details.\footnote{I do not
 think that they found the answer,  as their arguments 
 are circular,  and they seem to be well aware of this circularity. } 
 The
@@ -1455,7 +1457,7 @@ sections of this chapter it is possible to build
 models corresponding to the intuitive idea of a simultaneous
 measurement of several non--commuting observables,  like,  for instance, 
  different spin components,  
-positions \underline{and}
+positions {and}
 momenta etc.  A simple example of such a model was given in the 
 previous section.  
 After playing for a while with similar models it is
@@ -1563,7 +1565,7 @@ Explicitly,  using the definition of $V_{\bf n}$,  we have
 n'}  ({\bf n})\right)e ({\bf n'}) d\mu  ({\bf n'}) -{\kappa\over 2} \rho ({\bf n}). 
 \ee
 Notice that for each operator $a\in{\cal L} ({\cal H}_q)$
-we have the following formula: \footnote{The formula 
+we have the following formula:\footnote{The formula 
 is easily established for $a$
 of the form $e ({\bf n'})$,  and 
 then extended to arbitrary operators by linearity. }
