--- a/feynman-spontaneous-emission/feynman-photons.tex
+++ b/feynman-spontaneous-emission/feynman-photons.tex
@@ -10,6 +10,8 @@
 \pdfadjustspacing=2
 \frenchspacing
 
+\noindent It was a wonderful world my father told me about.
+
 You might wonder what he got out of it all. I went to MIT. I went to Princeton. I came home, and he said, ``Now you've got a science education. I have always wanted to know something that I have never understood, and so, my son, I want you to explain it to me."
 
 I said yes.
