--- a/hep-th-9601064/out.tex
+++ b/hep-th-9601064/out.tex
@@ -76,7 +76,9 @@ Helium-II.
 
 \end{abstract}
 
-\section{The transplanckian reservoir}
+\newpage
+
+\section{The Transplanckian Reservoir}
 
 A fundamental problem in black hole physics is to account for the
 origin of the outgoing modes. In ordinary field theory these modes
