--- a/1803.00545v3/main_clean.tex
+++ b/1803.00545v3/main_clean.tex
@@ -52,7 +52,15 @@ bookmarksopenlevel=10
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[noBBpl]{mathpazo}
 \linespread{1.1}
-\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
 
 
 \ifUSEMULTIBIB
