--- a/1611.09471/eptcs.cls
+++ b/1611.09471/eptcs.cls
@@ -198,7 +198,7 @@
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\RequirePackage{hyperref} % add hyperlinks
+%\RequirePackage{hyperref} % add hyperlinks
 \RequirePackage{mathptmx} % Pick Times Roman as a base font
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
