--- a/1611.09471/qm-with-bib.tex
+++ b/1611.09471/qm-with-bib.tex
@@ -1,5 +1,36 @@
-\documentclass{eptcs}
+\documentclass[12pt]{article}
 \providecommand{\event}{TFPIE} % Name of the event you are submitting to
+
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\date{29 Nov 2016}
 
 \usepackage{tikz}
 \usepackage{amsmath}
@@ -54,14 +85,9 @@
 
 \title{Learn Quantum Mechanics with Haskell}
 \author{Scott N. Walck
-\institute{Department of Physics\\
-  Lebanon Valley College\\
-  Annville, Pennsylvania, USA}
-\email{walck@lvc.edu}
 }
 
-\def\titlerunning{Learn Quantum Mechanics with Haskell}
-\def\authorrunning{Scott N. Walck}
+\pagestyle{plain}
 
 \begin{document}
 
@@ -112,8 +138,8 @@ We present a Haskell-based method for learning quantum mechanics that takes
 place within a senior-level quantum mechanics course.
 Students in the course may have no experience with Haskell
 or programming at all.
-We take the attitude of Papert\cite{papert}
-and others\cite{sicm,sussmanFDG,alegreTFPIE2015,walck2014}
+We take the attitude of Papert \cite{papert}
+and others \cite{sicm,sussmanFDG,alegreTFPIE2015,walck2014}
 that students are aided in their learning by having
 building blocks with which to create interesting structures,
 that such creative activity is a motivating and effective
@@ -141,9 +167,9 @@ The experiment demonstrates the quantization of angular
 momentum, which we now know comes in integer and half-integer
 multiples of $\hbar$, Planck's constant.
 Several modern quantum mechanics textbooks begin the subject
-with the Stern-Gerlach experiment.\cite{schumacherwestmoreland,townsend,sakurainapolitano}
+with the Stern-Gerlach experiment \cite{schumacherwestmoreland,townsend,sakurainapolitano}.
 The Feynman Lectures also introduce the Stern-Gerlach experiment
-early in the volume on quantum mechanics.\cite{feynmanlectures3}
+early in the volume on quantum mechanics \cite{feynmanlectures3}.
 
 A schematic of the Stern-Gerlach experiment is shown in Figure~\ref{sterngerlach}.
 Silver (Ag) atoms are heated in an oven and made into a beam by passing
@@ -196,7 +222,7 @@ spectrum of deflection of the silver atom beam.
 
 Instead, what is seen in the experiment is that the beam splits into
 two beams, and produces two spots on a detecting screen.
-Gerlach called this ``directional quantization''\cite{townsend},
+Gerlach called this ``directional quantization''~\cite{townsend},
 and, since magnetic dipole moment is proportional to angular momentum,
 we now think of this as quantization of angular momentum.
 The electron and the silver atom are called spin-1/2 particles
@@ -226,7 +252,7 @@ for the single beam coming out of the oven, and a couple of utility
 functions to manipulate the stack.
 These functions and the rest of the laboratory language
 are available in the module \texttt{Physics.Learn.BeamStack} in the \emph{learn-physics}
-package\cite{learn-physics}.
+package~\cite{learn-physics}.
 
 \begin{figure}
 \begin{Highlighting}[]
@@ -323,7 +349,7 @@ on the right side of the splitter (the \emph{spin-down} beam)
 is placed on the top of the stack.  Figure~\ref{sgsplitter}(c) lists
 functions for beam splitters in various directions.
 
-The quantum mechanics book by Townsend\cite{townsend} gives a sequence
+The quantum mechanics book by Townsend~\cite{townsend} gives a sequence
 of SG experiments that help to show what a theory of quantum mechanics
 needs to explain, or at least predict.  Townsend's Experiment~1
 is designed to show that although there is randomness in the measurement
@@ -384,7 +410,7 @@ Prelude Physics.Learn.BeamStack> \color{blue}{splitZ it}
 
 (b)
 \end{center}
-\caption{Townsend's\cite{townsend} Experiment 1.  (a) Measuring the same thing twice
+\caption{Townsend's~\cite{townsend} Experiment 1.  (a) Measuring the same thing twice
   in succession gives the same results.  Every particle that is found to deflect
   in the positive $z$ direction at the first splitter also deflects in the
   positive $z$ direction at the second splitter.  We see this from the intensities.
@@ -815,12 +841,12 @@ a Stern-Gerlach splitter, for example.  Paul Dirac created a notation
 based on the inner product, or bracket $\langle \phi | \psi \rangle$,
 calling $\bra{\phi}$ a \emph{bra} and $\ket{\psi}$ a \emph{ket}.  The bra vector
 is dual to the ket vector.  Jerzy Karczmarczuk gave an early
-implementation of kets in Haskell.\cite{karczmarczuk2003}
+implementation of kets in Haskell \cite{karczmarczuk2003}.
 Figure~\ref{calclangkets} shows ket
 vectors for spin-1/2 particles.
 The calculational language
 is available in the module \texttt{Physics.Learn.Ket} in the \emph{learn-physics}
-package\cite{learn-physics}.
+package~\cite{learn-physics}.
 
 \begin{figure}
 \begin{tabular}{ll}
@@ -990,7 +1016,7 @@ The calculational language provides a function
 \FunctionTok{timeEv} \SpecialCharTok{::} \DataTypeTok{TimeStep} \SpecialCharTok{->} \DataTypeTok{Operator} \SpecialCharTok{->} \DataTypeTok{Ket} \SpecialCharTok{->} \DataTypeTok{Ket}
 \end{Highlighting}
 to numerically solve the Schr\"odinger equation, using an algorithm
-from \emph{Numerical Recipes}\cite{numericalrecipes}.
+from \emph{Numerical Recipes}~\cite{numericalrecipes}.
 This function takes a time step, a Hamiltonian operator, and the current
 state ket, and returns the state ket advanced by the time step.
 
