--- a/1412.4880/lppfullnomint.tex
+++ b/1412.4880/lppfullnomint.tex
@@ -1,4 +1,4 @@
-\documentclass{eptcs}
+\documentclass[11pt]{article}
 \providecommand{\event}{TFPIE} % Name of the event you are submitting to
 
 \usepackage{amsmath}
@@ -7,15 +7,48 @@
 
 \title{Learn Physics by Programming in Haskell}
 \author{Scott N. Walck
-\institute{Department of Physics\\
-  Lebanon Valley College\\
-  Annville, Pennsylvania, USA}
-\email{walck@lvc.edu}
 }
 
-\def\titlerunning{Learn Physics by Programming in Haskell}
-\def\authorrunning{Scott N. Walck}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+\date{16 Dec 2014}
 \begin{document}
 
 \maketitle
