--- a/haskell-98-tutorial-sources/haskell-tutorial.tex
+++ b/haskell-98-tutorial-sources/haskell-tutorial.tex
@@ -1,14 +1,48 @@
 
-\documentclass[twoside,11pt]{article}
-\textheight=8.5in
-\textwidth=6.5in
-\topmargin=-.3in
-\oddsidemargin=0in
-\evensidemargin=0in
-\parskip=6pt plus2pt minus2pt
-\pagestyle{headings}
+\documentclass[11pt]{article}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
-\input{report-refs}
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\input{report-refs}
+
+\parskip=9pt plus2pt minus2pt
+\parindent0pt
 
 \usepackage{epsf}
 
@@ -66,6 +100,7 @@ Copyright \copyright\ 1999 Paul Hudak, John Peterson and Joseph Fasel
      The above copyright notice and this permission notice shall be
      included in all copies or substantial portions of the Text.
 
+\newpage
 
 \input{intro}
 \input{goodies}
