--- a/haskell-report/report/libs/Data-Ratio.tex
+++ b/haskell-report/report/libs/Data-Ratio.tex
@@ -84,7 +84,8 @@ Any real interval contains a unique simplest rational;
 \section{Specification
 }
 \begin{quote}
-{\haddockverb\begin{verbatim}
+
+{\haddockverb\scriptsize\begin{verbatim}
  module  Data.Ratio (
      Ratio, Rational, (%), numerator, denominator, approxRational ) where
  
