--- a/scott-1980/scott-1980.tex
+++ b/scott-1980/scott-1980.tex
@@ -23,6 +23,7 @@ bookmarksopenlevel=10
 \pagestyle{plain}
 \usepackage{eulervm}
 \usepackage{mathpartir}
+\usepackage[bb=pazo]{mathalpha}
 
 % these include amsmath and that can cause trouble in older docs.
 \input{../helpers/cmrsum}
@@ -53,6 +54,8 @@ bookmarksopenlevel=10
 \def\cod{\mathop{\rm cod}}
 \def\id{{\rm 1}}
 \def\comp{\circ}
+\def\bbone{\mathbb 1}
+\def\bbzero{0}
 
 \title{Relating Theories of the $\lambda$-Calculus}
 \author{Dana Scott \\
@@ -165,8 +168,36 @@ are then maps $f: A^n\to B$. Not much of a surprise.
 
 We have to take care, however. In the first place, a given category may not have cartesian products (it fails to have enough types). Even if it does, the maps allowed may be too restricted - for logical purposes. Take the category of groups and homomorphisms, for example. The required products exist.
 A map $f : A^2 \to B$ in this category has to be a group homomor­phism, naturally. Suppose two maps $u,v: A \to B$ were given.
-Intuitively we think in terms of elements and that we are map­ping $x \mapsto u(x)$ and $y \mapsto v(y)$. The pointwise group product of the maps, namely, $x,y \mapsto  u(x) \dot v(y)$ is a very nice map $g : A^2 \to B$ in the ordinary sense --- but unless the group $B$ is abelian, $g$ is not a homomorphism. It is a ``logical'' map but not an ``algebra­ic'' map. Pure category theory applies to many algebraic situa­tions (as everyone knows that is why it is a good theory), but not all categories are ``logical'' even if they have products. In the example of groups, what was "missing" was the group 
+Intuitively we think in terms of elements and that we are map­ping $x \mapsto u(x)$ and $y \mapsto v(y)$. The pointwise group product of the maps, namely, $x,y \mapsto  u(x) \cdot v(y)$ is a very nice map $g : A^2 \to B$ in the ordinary sense --- but unless the group $B$ is abelian, $g$ is not a homomorphism. It is a ``logical'' map but not an ``algebra­ic'' map. Pure category theory applies to many algebraic situa­tions (as everyone knows that is why it is a good theory), but not all categories are ``logical'' even if they have products. In the example of groups, what was "missing" was the group 
 multiplication $\mu: B^2 \to B$ as a map in the category. (Inverse is missing as well, since it reverses order.) There is an in­teresting theory of algebraic theories that address the ques­tion of the proper categorial construction of categories of al­gebras, but I do not think we should invoke that theory here.
+
+The precise description of products is as follows. We as­sume our category has a special domain $\bbone$ (the empty product, so $A^0 = B^0 = {\bbone}$), and for each domain $A$ a special map $\bbzero_A: A \mapsto \bbone$. (The domain $\bbone$, intuitively, has just one ``element''.)  Moreover the rule about maps is that $\bbzero_A$ is unique; that is whenever $f : A \mapsto \bbone$, then we have the equation 
+$$f = \bbzero_A .$$
+%
+Concerning binary products, we have for any two domains $A$ and $B$ a special choice of a domain $A \times B$ (and so $A^{n+1} = A^n times A$), and special maps
+\begin{align*}
+p_{AB}&: A \times B \to A\\
+q_{AB}&: A \times B \to B
+\end{align*}
+%
+But the mere existence of ``projections'' does not characterize $A \times B$ as a product. We have to assume that there is a chosen pairing operation $\langle f,g \rangle$ on maps such that types are assigned by the rule:
+%
+$$
+\inferrule
+  {{f: C \to A} \\ {g: C \to B}}
+  {\langle f,g \rangle: C \to A \times B}
+$$
+%
+Moreover, provided $f$ and $g$ are as above and $h: C \to A \times B $ we have to assume
+\begin{align*}
+p_{AB} \comp \langle f,g \rangle &= f\\
+q_{AB} \comp \langle f,g \rangle &= g\\
+\langle p_{AB}\comp h, q_{AB}\comp h\rangle &= h
+\end{align*}
+%
+that is to say, there is an explicit one-one correspondence between the pairs of maps $f$, $g$ and the map $h$ into the product. This all now makes $A times B$ well behaved within the category. 
+
+So much for a theory of tuples and multiary maps. But we still want a theory of functions: a category allows us to talk of selected functions, while we would want various equations to have a force relating to arbitrary functions. The answer to this desire is function spaces as explicit domains in the cate­ gory. Given $A$ and $B$ we want to form $(A \to B)$ as a domain in its own right; if so, there are many maps that have to be set down to make the function space behave (and here we must defi­nitely leave the category of groups).
 
 
 
