--- a/scott-1980/scott-1980.tex
+++ b/scott-1980/scott-1980.tex
@@ -149,7 +149,7 @@ $$h\comp (g \comp f) = (h \comp g) \comp f,$$
 provided $A= \dom f$ and $B = \cod f$ and the double compositions are defined. These are {\it functional} equations, and they say that two functions defined in different ways are in fact {\it identical}.
 Furthermore, identical things can everywhere replace one another.
 
-This point about extensionality may not seem exciting or im­portant, but the logician should remember that, in certain intensional theories of functions, ``obvious'' definitions will not provide categories. We shall return to this point later. But is category theory the long-sought answer? No, no, not at all. Category theory {\it pure} provides nothing explicitly aside from identity functions --- and they occur only if we have some possible domain. We do get compositions if we have the neces­sary terms. Thus, as it stands, category theory has no existential import (It was not meant to.). Set theory has "too much" existential import (It was meant to.). What we seek is the middle way --- and an argument that the middle way is natural and general.
+This point about extensionality may not seem exciting or im­portant, but the logician should remember that, in certain intensional theories of functions, ``obvious'' definitions will not provide categories. We shall return to this point later. But is category theory the long-sought answer? No, no, not at all. Category theory {\it pure} provides nothing explicitly aside from identity functions --- and they occur only if we have some possible domain. We do get compositions if we have the neces­sary terms. Thus, as it stands, category theory has no existential import. (It was not meant to.) Set theory has "too much" existential import. (It was meant to.) What we seek is the middle way --- and an argument that the middle way is natural and general.
 
 There is no need to build up unnecessary suspense: the middle way is the theory of the (so called) cartesian closed categories.
 Fortunately Lambek has written extensively about the theory, and I can refer the reader to his papers for fur­ther details; I also am happy to acknowledge his writings as helping me understand what is going on. If we remark that his paper in this volume is called "From $\lambda$-calculus to cartesian closed categories'', then we might say that my present paper ought to be called ``From cartesian closed categories to $\lambda$-calculus.'' 
@@ -174,7 +174,7 @@ multiplication $\mu: B^2 \to B$ as a map in the category. (Inverse is missing as
 The precise description of products is as follows. We as­sume our category has a special domain $\bbone$ (the empty product, so $A^0 = B^0 = {\bbone}$), and for each domain $A$ a special map $\bbzero_A: A \mapsto \bbone$. (The domain $\bbone$, intuitively, has just one ``element''.)  Moreover the rule about maps is that $\bbzero_A$ is unique; that is whenever $f : A \mapsto \bbone$, then we have the equation 
 $$f = \bbzero_A .$$
 %
-Concerning binary products, we have for any two domains $A$ and $B$ a special choice of a domain $A \times B$ (and so $A^{n+1} = A^n times A$), and special maps
+Concerning binary products, we have for any two domains $A$ and $B$ a special choice of a domain $A \times B$ (and so $A^{n+1} = A^n \times A$), and special maps
 \begin{align*}
 p_{AB}&: A \times B \to A\\
 q_{AB}&: A \times B \to B
@@ -197,7 +197,36 @@ q_{AB} \comp \langle f,g \rangle &= g\\
 %
 that is to say, there is an explicit one-one correspondence between the pairs of maps $f$, $g$ and the map $h$ into the product. This all now makes $A times B$ well behaved within the category. 
 
-So much for a theory of tuples and multiary maps. But we still want a theory of functions: a category allows us to talk of selected functions, while we would want various equations to have a force relating to arbitrary functions. The answer to this desire is function spaces as explicit domains in the cate­ gory. Given $A$ and $B$ we want to form $(A \to B)$ as a domain in its own right; if so, there are many maps that have to be set down to make the function space behave (and here we must defi­nitely leave the category of groups).
+So much for a theory of tuples and multiary maps. But we still want a theory of functions: a category allows us to talk of selected functions, while we would want various equations to have a force relating to arbitrary functions. The answer to this desire is function spaces as explicit domains in the cate­ gory. Given $A$ and $B$ we want to form $(A \to B)$ as a domain in its own right; if so, there are many maps that have to be set down to make the function space behave. (And here we must defi­nitely leave the category of groups.)
+
+\def\ebc{\epsilon_{BC}}
+
+In the first place there has to be an evaluation map
+$\ebc : (B \to C) \times B \to C$ with the intuitive interpretation that it is the map $ f,x \mapsto f(x)$. In the second place there has to be a map for shifting around variables; more precisely, suppose
+$h: A\times B \to C$ is a map with two arguments. In an evaluation $h(x,y)$, we can think of holding $x$ constant and regarding $h(x,y)$ as a function of $y$. We need a name for this function --- and for the correspondence with possible values of x. We write
+$$
+\Lambda_{ABC}\, h : A\times B -> C
+$$
+%
+so that the function we were thinking of --- given $x$ --- was
+$(\Lambda_{ABC} h)\, (x)$. But all this function-value notation is not cate­gorical notation; what we have to say is that there is a one­ one correspondence via $\Lambda$ between maps $h : A\times B \to C$ and maps $k: A \to (B \to C)$. This comes down to these two equations:
+%
+\begin{align*}
+\epsilon \comp \langle (\Lambda h)\comp p, q\rangle &= h, {\textrm{ and}} \\
+\Lambda(\epsilon \comp \langle k \comp p, q \rangle) &= k.
+\end{align*}
+%
+(It is necessary to have subscripts here: $\Lambda_{ABC}$, $p_{AB}$, $q_{AB}$, and $\epsilon_{BC}$; but we leave them off when there is no ambiguity.)
+
+The notation is now wholly categorical (and mostly unread­ able). Category theorists put the whole thing (that is, the definition of a {c.c.c.}, which is what we have just given) into the language of functors, which has a lot of sense. But if you have never seen any abstract category theory before, it is really rather too abstract. The idea of a c.c.c. as a system of types is, I think, reasonably simple. Each {c.c.c.} repre­sents a theory of functions. The maps in the category are cer­tain special functions that are used to express the relations between the types (the domains of the category). In order to
+be able to deal with multiary functions, we assume we can form
+(and analyze) products. In order to be able to work with trans­formations of arbitrary functions (``arbitrary'' within the the­ory), we assume we can form function spaces: this is where ``higher'' types enter the theory, as in the sequence of domains:
+$$
+A, (A \to A), ((A \to A) \to A), (((A \to A) \to A) \to A), \cdots
+$$
+To be able really to view these domains as function spaces, cer­tain operations, E and A, with characteristic equations have to be laid down.
+If a {c.c.c.} is a theory of functions (and we include here higher-type functions), then the theory of {c.c.c}'s is the the­ory of types of the title of this section. It is only one such theory. ``Bigger'' theories could be obtained by demanding more types: for example we could axiomatize {\it coproduct}s (disjoint sums), $\bbzero$ and $A+ B$. We could demand infinite products and co­ products. We could throw in a type 
+
 
 
 
